// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`categorizer widget should snapshot on mobile: first mobile render 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        <strong>
          Classify each graph according to the kind of relationship it suggests.
        </strong>
      </div>
    </div>
    <div
      class="paragraph perseus-paragraph-centered"
      data-perseus-paragraph-index="1"
    >
      <div
        class="perseus-block-math"
        style="margin-left: -16px; margin-right: -16px;"
      >
        <div
          class="perseus-block-math-inner"
          style="overflow-x: auto; overflow-y: hidden; margin-top: -10px; margin-bottom: -10px; transform: translate3d(0,0,0); padding: 10px 16px 10px 16px;"
        >
          <span
            style="display: block; width: 100%; transform: scale(1, 1); transform-origin: 0 0; opacity: 1;"
          >
            <span
              class="mock-TeX"
            >
              \\qquad\\qquad\\quad\\text{Graph 1}\\qquad\\qquad\\quad\\qquad\\qquad\\quad\\text{Graph 2}
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="2"
    >
      <div
        class="paragraph"
      >
        <div
          class="perseus-widget-container widget-nohighlight widget-block"
        >
          <div
            class="categorizer-container fullBleedContainer_8ybp6"
          >
            <table
              class="categorizer-table mobileTable_1wmcwov"
            >
              <thead>
                <tr>
                  <td
                    class="emptyHeaderCell_1mttrgd"
                  />
                  <th
                    class="header_whrfk4"
                    id="perseus_radio_10-cat-0"
                    scope="col"
                  >
                    <div
                      class="perseus-renderer perseus-renderer-responsive"
                    >
                      <div
                        class="paragraph"
                        data-perseus-paragraph-index="0"
                      >
                        <div
                          class="paragraph"
                        >
                          No relationship
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="header_whrfk4"
                    id="perseus_radio_10-cat-1"
                    scope="col"
                  >
                    <div
                      class="perseus-renderer perseus-renderer-responsive"
                    >
                      <div
                        class="paragraph"
                        data-perseus-paragraph-index="0"
                      >
                        <div
                          class="paragraph"
                        >
                          Positive linear relationship
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="header_whrfk4"
                    id="perseus_radio_10-cat-2"
                    scope="col"
                  >
                    <div
                      class="perseus-renderer perseus-renderer-responsive"
                    >
                      <div
                        class="paragraph"
                        data-perseus-paragraph-index="0"
                      >
                        <div
                          class="paragraph"
                        >
                          Negative linear relationship
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="header_whrfk4"
                    id="perseus_radio_10-cat-3"
                    scope="col"
                  >
                    <div
                      class="perseus-renderer perseus-renderer-responsive"
                    >
                      <div
                        class="paragraph"
                        data-perseus-paragraph-index="0"
                      >
                        <div
                          class="paragraph"
                        >
                          Nonlinear relationship
                        </div>
                      </div>
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <th
                    class="itemHeader_1spxt1g"
                    id="perseus_radio_10-item-0"
                    scope="row"
                  >
                    <div
                      class="perseus-renderer perseus-renderer-responsive"
                    >
                      <div
                        class="paragraph"
                        data-perseus-paragraph-index="0"
                      >
                        <div
                          class="paragraph"
                        >
                          Graph 
                          <span
                            style="white-space: nowrap;"
                          >
                            <span />
                            <span
                              class="mock-TeX"
                            >
                              1
                            </span>
                            <span />
                          </span>
                        </div>
                      </div>
                    </div>
                  </th>
                  <td
                    class="category cell_13aakpm"
                  >
                    <div
                      class="default_xu2jcg"
                    >
                      <div
                        class="default_xu2jcg-o_O-wrapper_h2k1uh"
                        tabindex="-1"
                      >
                        <div
                          class="default_xu2jcg-o_O-choiceWrapper_s2wtqp"
                        >
                          <div
                            class="default_xu2jcg-o_O-inputWrapper_1ojwnsk-o_O-inputWrapper_9dv44h"
                          >
                            <input
                              aria-invalid="false"
                              aria-labelledby="perseus_radio_10-item-0 perseus_radio_10-cat-0"
                              class="inputReset_1wxa7bn-o_O-default_1osfxgj-o_O-default_1o5mow5"
                              id=":ra:"
                              name="perseus_radio_10-row-0"
                              type="radio"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </td>
                  <td
                    class="category cell_13aakpm"
                  >
                    <div
                      class="default_xu2jcg"
                    >
                      <div
                        class="default_xu2jcg-o_O-wrapper_h2k1uh"
                        tabindex="-1"
                      >
                        <div
                          class="default_xu2jcg-o_O-choiceWrapper_s2wtqp"
                        >
                          <div
                            class="default_xu2jcg-o_O-inputWrapper_1ojwnsk-o_O-inputWrapper_9dv44h"
                          >
                            <input
                              aria-invalid="false"
                              aria-labelledby="perseus_radio_10-item-0 perseus_radio_10-cat-1"
                              class="inputReset_1wxa7bn-o_O-default_1osfxgj-o_O-default_1o5mow5"
                              id=":rb:"
                              name="perseus_radio_10-row-0"
                              type="radio"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </td>
                  <td
                    class="category cell_13aakpm"
                  >
                    <div
                      class="default_xu2jcg"
                    >
                      <div
                        class="default_xu2jcg-o_O-wrapper_h2k1uh"
                        tabindex="-1"
                      >
                        <div
                          class="default_xu2jcg-o_O-choiceWrapper_s2wtqp"
                        >
                          <div
                            class="default_xu2jcg-o_O-inputWrapper_1ojwnsk-o_O-inputWrapper_9dv44h"
                          >
                            <input
                              aria-invalid="false"
                              aria-labelledby="perseus_radio_10-item-0 perseus_radio_10-cat-2"
                              class="inputReset_1wxa7bn-o_O-default_1osfxgj-o_O-default_1o5mow5"
                              id=":rc:"
                              name="perseus_radio_10-row-0"
                              type="radio"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </td>
                  <td
                    class="category cell_13aakpm"
                  >
                    <div
                      class="default_xu2jcg"
                    >
                      <div
                        class="default_xu2jcg-o_O-wrapper_h2k1uh"
                        tabindex="-1"
                      >
                        <div
                          class="default_xu2jcg-o_O-choiceWrapper_s2wtqp"
                        >
                          <div
                            class="default_xu2jcg-o_O-inputWrapper_1ojwnsk-o_O-inputWrapper_9dv44h"
                          >
                            <input
                              aria-invalid="false"
                              aria-labelledby="perseus_radio_10-item-0 perseus_radio_10-cat-3"
                              class="inputReset_1wxa7bn-o_O-default_1osfxgj-o_O-default_1o5mow5"
                              id=":rd:"
                              name="perseus_radio_10-row-0"
                              type="radio"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </td>
                </tr>
                <tr>
                  <th
                    class="itemHeader_1spxt1g"
                    id="perseus_radio_10-item-1"
                    scope="row"
                  >
                    <div
                      class="perseus-renderer perseus-renderer-responsive"
                    >
                      <div
                        class="paragraph"
                        data-perseus-paragraph-index="0"
                      >
                        <div
                          class="paragraph"
                        >
                          Graph 
                          <span
                            style="white-space: nowrap;"
                          >
                            <span />
                            <span
                              class="mock-TeX"
                            >
                              2
                            </span>
                            <span />
                          </span>
                        </div>
                      </div>
                    </div>
                  </th>
                  <td
                    class="category cell_13aakpm"
                  >
                    <div
                      class="default_xu2jcg"
                    >
                      <div
                        class="default_xu2jcg-o_O-wrapper_h2k1uh"
                        tabindex="-1"
                      >
                        <div
                          class="default_xu2jcg-o_O-choiceWrapper_s2wtqp"
                        >
                          <div
                            class="default_xu2jcg-o_O-inputWrapper_1ojwnsk-o_O-inputWrapper_9dv44h"
                          >
                            <input
                              aria-invalid="false"
                              aria-labelledby="perseus_radio_10-item-1 perseus_radio_10-cat-0"
                              class="inputReset_1wxa7bn-o_O-default_1osfxgj-o_O-default_1o5mow5"
                              id=":re:"
                              name="perseus_radio_10-row-1"
                              type="radio"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </td>
                  <td
                    class="category cell_13aakpm"
                  >
                    <div
                      class="default_xu2jcg"
                    >
                      <div
                        class="default_xu2jcg-o_O-wrapper_h2k1uh"
                        tabindex="-1"
                      >
                        <div
                          class="default_xu2jcg-o_O-choiceWrapper_s2wtqp"
                        >
                          <div
                            class="default_xu2jcg-o_O-inputWrapper_1ojwnsk-o_O-inputWrapper_9dv44h"
                          >
                            <input
                              aria-invalid="false"
                              aria-labelledby="perseus_radio_10-item-1 perseus_radio_10-cat-1"
                              class="inputReset_1wxa7bn-o_O-default_1osfxgj-o_O-default_1o5mow5"
                              id=":rf:"
                              name="perseus_radio_10-row-1"
                              type="radio"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </td>
                  <td
                    class="category cell_13aakpm"
                  >
                    <div
                      class="default_xu2jcg"
                    >
                      <div
                        class="default_xu2jcg-o_O-wrapper_h2k1uh"
                        tabindex="-1"
                      >
                        <div
                          class="default_xu2jcg-o_O-choiceWrapper_s2wtqp"
                        >
                          <div
                            class="default_xu2jcg-o_O-inputWrapper_1ojwnsk-o_O-inputWrapper_9dv44h"
                          >
                            <input
                              aria-invalid="false"
                              aria-labelledby="perseus_radio_10-item-1 perseus_radio_10-cat-2"
                              class="inputReset_1wxa7bn-o_O-default_1osfxgj-o_O-default_1o5mow5"
                              id=":rg:"
                              name="perseus_radio_10-row-1"
                              type="radio"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </td>
                  <td
                    class="category cell_13aakpm"
                  >
                    <div
                      class="default_xu2jcg"
                    >
                      <div
                        class="default_xu2jcg-o_O-wrapper_h2k1uh"
                        tabindex="-1"
                      >
                        <div
                          class="default_xu2jcg-o_O-choiceWrapper_s2wtqp"
                        >
                          <div
                            class="default_xu2jcg-o_O-inputWrapper_1ojwnsk-o_O-inputWrapper_9dv44h"
                          >
                            <input
                              aria-invalid="false"
                              aria-labelledby="perseus_radio_10-item-1 perseus_radio_10-cat-3"
                              class="inputReset_1wxa7bn-o_O-default_1osfxgj-o_O-default_1o5mow5"
                              id=":rh:"
                              name="perseus_radio_10-row-1"
                              type="radio"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="3"
    >
      <div
        class="paragraph"
      >
        <strong>
          Graph 1.
        </strong>
      </div>
    </div>
    <div
      class="paragraph perseus-paragraph-centered"
      data-perseus-paragraph-index="4"
    >
      <div
        class="paragraph"
      >
        <div
          class="fixed-to-responsive svg-image"
          data-scale="1"
          style="max-width: 220px; max-height: 223px;"
        >
          <span
            style="top: 0px; left: 0px; width: 100%; height: 100%; position: absolute; min-width: 20px; display: flex; justify-content: center; align-content: center;"
          >
            <div
              class="default_xu2jcg-o_O-spinnerContainer_agrn11"
            >
              <svg
                height="48"
                viewBox="0 0 48 48"
                width="48"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="loadingSpinner_1dvgeb3-o_O-inlineStyles_8njutv"
                  d="M44.19 23.455a1.91 1.91 0 1 1 3.801 0h.003c.004.18.006.363.006.545 0 13.255-10.745 24-24 24S0 37.255 0 24 10.745 0 24 0c.182 0 .364.002.545.006V.01a1.91 1.91 0 1 1 0 3.801v.015A20.564 20.564 0 0 0 24 3.818C12.854 3.818 3.818 12.854 3.818 24c0 11.146 9.036 20.182 20.182 20.182 11.146 0 20.182-9.036 20.182-20.182 0-.182-.003-.364-.007-.545h.015z"
                  fill-rule="nonzero"
                />
              </svg>
            </div>
          </span>
          <button
            aria-label="Make image bigger."
            class="button_vr44p2-o_O-reset_152ygtm-o_O-link_13xlah4-o_O-inlineStyles_1l8d9fz"
            type="button"
          />
        </div>
      </div>
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="5"
    >
      <div
        class="paragraph"
      >
        <strong>
          Graph 2.
        </strong>
      </div>
    </div>
    <div
      class="paragraph perseus-paragraph-centered"
      data-perseus-paragraph-index="6"
    >
      <div
        class="paragraph"
      >
        <div
          class="fixed-to-responsive svg-image"
          data-scale="1"
          style="max-width: 244px; max-height: 223px;"
        >
          <span
            style="top: 0px; left: 0px; width: 100%; height: 100%; position: absolute; min-width: 20px; display: flex; justify-content: center; align-content: center;"
          >
            <div
              class="default_xu2jcg-o_O-spinnerContainer_agrn11"
            >
              <svg
                height="48"
                viewBox="0 0 48 48"
                width="48"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="loadingSpinner_1dvgeb3-o_O-inlineStyles_8njutv"
                  d="M44.19 23.455a1.91 1.91 0 1 1 3.801 0h.003c.004.18.006.363.006.545 0 13.255-10.745 24-24 24S0 37.255 0 24 10.745 0 24 0c.182 0 .364.002.545.006V.01a1.91 1.91 0 1 1 0 3.801v.015A20.564 20.564 0 0 0 24 3.818C12.854 3.818 3.818 12.854 3.818 24c0 11.146 9.036 20.182 20.182 20.182 11.146 0 20.182-9.036 20.182-20.182 0-.182-.003-.364-.007-.545h.015z"
                  fill-rule="nonzero"
                />
              </svg>
            </div>
          </span>
          <button
            aria-label="Make image bigger."
            class="button_vr44p2-o_O-reset_152ygtm-o_O-link_13xlah4-o_O-inlineStyles_1l8d9fz"
            type="button"
          />
        </div>
          
      </div>
    </div>
  </div>
</div>
`;

exports[`categorizer widget should snapshot: first render 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        <strong>
          Classify each graph according to the kind of relationship it suggests.
        </strong>
      </div>
    </div>
    <div
      class="paragraph perseus-paragraph-centered"
      data-perseus-paragraph-index="1"
    >
      <div
        class="perseus-block-math"
      >
        <div
          class="perseus-block-math-inner"
          style="overflow-x: auto; overflow-y: hidden; padding-top: 10px; padding-bottom: 10px; margin-top: -10px; margin-bottom: -10px;"
        >
          <span
            class="mock-TeX"
          >
            \\qquad\\qquad\\quad\\text{Graph 1}\\qquad\\qquad\\quad\\qquad\\qquad\\quad\\text{Graph 2}
          </span>
        </div>
      </div>
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="2"
    >
      <div
        class="paragraph"
      >
        <div
          class="perseus-widget-container widget-nohighlight widget-block"
        >
          <div
            class="categorizer-container "
          >
            <table
              class="categorizer-table mobileTable_1wmcwov"
            >
              <thead>
                <tr>
                  <td
                    class="emptyHeaderCell_1mttrgd"
                  />
                  <th
                    class="header_whrfk4"
                    id="perseus_radio_9-cat-0"
                    scope="col"
                  >
                    <div
                      class="perseus-renderer perseus-renderer-responsive"
                    >
                      <div
                        class="paragraph"
                        data-perseus-paragraph-index="0"
                      >
                        <div
                          class="paragraph"
                        >
                          No relationship
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="header_whrfk4"
                    id="perseus_radio_9-cat-1"
                    scope="col"
                  >
                    <div
                      class="perseus-renderer perseus-renderer-responsive"
                    >
                      <div
                        class="paragraph"
                        data-perseus-paragraph-index="0"
                      >
                        <div
                          class="paragraph"
                        >
                          Positive linear relationship
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="header_whrfk4"
                    id="perseus_radio_9-cat-2"
                    scope="col"
                  >
                    <div
                      class="perseus-renderer perseus-renderer-responsive"
                    >
                      <div
                        class="paragraph"
                        data-perseus-paragraph-index="0"
                      >
                        <div
                          class="paragraph"
                        >
                          Negative linear relationship
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="header_whrfk4"
                    id="perseus_radio_9-cat-3"
                    scope="col"
                  >
                    <div
                      class="perseus-renderer perseus-renderer-responsive"
                    >
                      <div
                        class="paragraph"
                        data-perseus-paragraph-index="0"
                      >
                        <div
                          class="paragraph"
                        >
                          Nonlinear relationship
                        </div>
                      </div>
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <th
                    class="itemHeader_1spxt1g"
                    id="perseus_radio_9-item-0"
                    scope="row"
                  >
                    <div
                      class="perseus-renderer perseus-renderer-responsive"
                    >
                      <div
                        class="paragraph"
                        data-perseus-paragraph-index="0"
                      >
                        <div
                          class="paragraph"
                        >
                          Graph 
                          <span
                            style="white-space: nowrap;"
                          >
                            <span />
                            <span
                              class="mock-TeX"
                            >
                              1
                            </span>
                            <span />
                          </span>
                        </div>
                      </div>
                    </div>
                  </th>
                  <td
                    class="category cell_13aakpm"
                  >
                    <div
                      class="default_xu2jcg"
                    >
                      <div
                        class="default_xu2jcg-o_O-wrapper_h2k1uh"
                        tabindex="-1"
                      >
                        <div
                          class="default_xu2jcg-o_O-choiceWrapper_s2wtqp"
                        >
                          <div
                            class="default_xu2jcg-o_O-inputWrapper_1ojwnsk-o_O-inputWrapper_9dv44h"
                          >
                            <input
                              aria-invalid="false"
                              aria-labelledby="perseus_radio_9-item-0 perseus_radio_9-cat-0"
                              class="inputReset_1wxa7bn-o_O-default_1osfxgj-o_O-default_1o5mow5"
                              id=":r0:"
                              name="perseus_radio_9-row-0"
                              type="radio"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </td>
                  <td
                    class="category cell_13aakpm"
                  >
                    <div
                      class="default_xu2jcg"
                    >
                      <div
                        class="default_xu2jcg-o_O-wrapper_h2k1uh"
                        tabindex="-1"
                      >
                        <div
                          class="default_xu2jcg-o_O-choiceWrapper_s2wtqp"
                        >
                          <div
                            class="default_xu2jcg-o_O-inputWrapper_1ojwnsk-o_O-inputWrapper_9dv44h"
                          >
                            <input
                              aria-invalid="false"
                              aria-labelledby="perseus_radio_9-item-0 perseus_radio_9-cat-1"
                              class="inputReset_1wxa7bn-o_O-default_1osfxgj-o_O-default_1o5mow5"
                              id=":r1:"
                              name="perseus_radio_9-row-0"
                              type="radio"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </td>
                  <td
                    class="category cell_13aakpm"
                  >
                    <div
                      class="default_xu2jcg"
                    >
                      <div
                        class="default_xu2jcg-o_O-wrapper_h2k1uh"
                        tabindex="-1"
                      >
                        <div
                          class="default_xu2jcg-o_O-choiceWrapper_s2wtqp"
                        >
                          <div
                            class="default_xu2jcg-o_O-inputWrapper_1ojwnsk-o_O-inputWrapper_9dv44h"
                          >
                            <input
                              aria-invalid="false"
                              aria-labelledby="perseus_radio_9-item-0 perseus_radio_9-cat-2"
                              class="inputReset_1wxa7bn-o_O-default_1osfxgj-o_O-default_1o5mow5"
                              id=":r2:"
                              name="perseus_radio_9-row-0"
                              type="radio"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </td>
                  <td
                    class="category cell_13aakpm"
                  >
                    <div
                      class="default_xu2jcg"
                    >
                      <div
                        class="default_xu2jcg-o_O-wrapper_h2k1uh"
                        tabindex="-1"
                      >
                        <div
                          class="default_xu2jcg-o_O-choiceWrapper_s2wtqp"
                        >
                          <div
                            class="default_xu2jcg-o_O-inputWrapper_1ojwnsk-o_O-inputWrapper_9dv44h"
                          >
                            <input
                              aria-invalid="false"
                              aria-labelledby="perseus_radio_9-item-0 perseus_radio_9-cat-3"
                              class="inputReset_1wxa7bn-o_O-default_1osfxgj-o_O-default_1o5mow5"
                              id=":r3:"
                              name="perseus_radio_9-row-0"
                              type="radio"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </td>
                </tr>
                <tr>
                  <th
                    class="itemHeader_1spxt1g"
                    id="perseus_radio_9-item-1"
                    scope="row"
                  >
                    <div
                      class="perseus-renderer perseus-renderer-responsive"
                    >
                      <div
                        class="paragraph"
                        data-perseus-paragraph-index="0"
                      >
                        <div
                          class="paragraph"
                        >
                          Graph 
                          <span
                            style="white-space: nowrap;"
                          >
                            <span />
                            <span
                              class="mock-TeX"
                            >
                              2
                            </span>
                            <span />
                          </span>
                        </div>
                      </div>
                    </div>
                  </th>
                  <td
                    class="category cell_13aakpm"
                  >
                    <div
                      class="default_xu2jcg"
                    >
                      <div
                        class="default_xu2jcg-o_O-wrapper_h2k1uh"
                        tabindex="-1"
                      >
                        <div
                          class="default_xu2jcg-o_O-choiceWrapper_s2wtqp"
                        >
                          <div
                            class="default_xu2jcg-o_O-inputWrapper_1ojwnsk-o_O-inputWrapper_9dv44h"
                          >
                            <input
                              aria-invalid="false"
                              aria-labelledby="perseus_radio_9-item-1 perseus_radio_9-cat-0"
                              class="inputReset_1wxa7bn-o_O-default_1osfxgj-o_O-default_1o5mow5"
                              id=":r4:"
                              name="perseus_radio_9-row-1"
                              type="radio"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </td>
                  <td
                    class="category cell_13aakpm"
                  >
                    <div
                      class="default_xu2jcg"
                    >
                      <div
                        class="default_xu2jcg-o_O-wrapper_h2k1uh"
                        tabindex="-1"
                      >
                        <div
                          class="default_xu2jcg-o_O-choiceWrapper_s2wtqp"
                        >
                          <div
                            class="default_xu2jcg-o_O-inputWrapper_1ojwnsk-o_O-inputWrapper_9dv44h"
                          >
                            <input
                              aria-invalid="false"
                              aria-labelledby="perseus_radio_9-item-1 perseus_radio_9-cat-1"
                              class="inputReset_1wxa7bn-o_O-default_1osfxgj-o_O-default_1o5mow5"
                              id=":r5:"
                              name="perseus_radio_9-row-1"
                              type="radio"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </td>
                  <td
                    class="category cell_13aakpm"
                  >
                    <div
                      class="default_xu2jcg"
                    >
                      <div
                        class="default_xu2jcg-o_O-wrapper_h2k1uh"
                        tabindex="-1"
                      >
                        <div
                          class="default_xu2jcg-o_O-choiceWrapper_s2wtqp"
                        >
                          <div
                            class="default_xu2jcg-o_O-inputWrapper_1ojwnsk-o_O-inputWrapper_9dv44h"
                          >
                            <input
                              aria-invalid="false"
                              aria-labelledby="perseus_radio_9-item-1 perseus_radio_9-cat-2"
                              class="inputReset_1wxa7bn-o_O-default_1osfxgj-o_O-default_1o5mow5"
                              id=":r6:"
                              name="perseus_radio_9-row-1"
                              type="radio"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </td>
                  <td
                    class="category cell_13aakpm"
                  >
                    <div
                      class="default_xu2jcg"
                    >
                      <div
                        class="default_xu2jcg-o_O-wrapper_h2k1uh"
                        tabindex="-1"
                      >
                        <div
                          class="default_xu2jcg-o_O-choiceWrapper_s2wtqp"
                        >
                          <div
                            class="default_xu2jcg-o_O-inputWrapper_1ojwnsk-o_O-inputWrapper_9dv44h"
                          >
                            <input
                              aria-invalid="false"
                              aria-labelledby="perseus_radio_9-item-1 perseus_radio_9-cat-3"
                              class="inputReset_1wxa7bn-o_O-default_1osfxgj-o_O-default_1o5mow5"
                              id=":r7:"
                              name="perseus_radio_9-row-1"
                              type="radio"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="3"
    >
      <div
        class="paragraph"
      >
        <strong>
          Graph 1.
        </strong>
      </div>
    </div>
    <div
      class="paragraph perseus-paragraph-centered"
      data-perseus-paragraph-index="4"
    >
      <div
        class="paragraph"
      >
        <div
          class="fixed-to-responsive svg-image"
          data-scale="1"
          style="max-width: 220px; max-height: 223px;"
        >
          <span
            style="top: 0px; left: 0px; width: 100%; height: 100%; position: absolute; min-width: 20px; display: flex; justify-content: center; align-content: center;"
          >
            <div
              class="default_xu2jcg-o_O-spinnerContainer_agrn11"
            >
              <svg
                height="48"
                viewBox="0 0 48 48"
                width="48"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="loadingSpinner_1dvgeb3-o_O-inlineStyles_8njutv"
                  d="M44.19 23.455a1.91 1.91 0 1 1 3.801 0h.003c.004.18.006.363.006.545 0 13.255-10.745 24-24 24S0 37.255 0 24 10.745 0 24 0c.182 0 .364.002.545.006V.01a1.91 1.91 0 1 1 0 3.801v.015A20.564 20.564 0 0 0 24 3.818C12.854 3.818 3.818 12.854 3.818 24c0 11.146 9.036 20.182 20.182 20.182 11.146 0 20.182-9.036 20.182-20.182 0-.182-.003-.364-.007-.545h.015z"
                  fill-rule="nonzero"
                />
              </svg>
            </div>
          </span>
          <button
            aria-label="Make image bigger."
            class="button_vr44p2-o_O-reset_152ygtm-o_O-link_13xlah4-o_O-inlineStyles_1l8d9fz"
            type="button"
          />
        </div>
      </div>
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="5"
    >
      <div
        class="paragraph"
      >
        <strong>
          Graph 2.
        </strong>
      </div>
    </div>
    <div
      class="paragraph perseus-paragraph-centered"
      data-perseus-paragraph-index="6"
    >
      <div
        class="paragraph"
      >
        <div
          class="fixed-to-responsive svg-image"
          data-scale="1"
          style="max-width: 244px; max-height: 223px;"
        >
          <span
            style="top: 0px; left: 0px; width: 100%; height: 100%; position: absolute; min-width: 20px; display: flex; justify-content: center; align-content: center;"
          >
            <div
              class="default_xu2jcg-o_O-spinnerContainer_agrn11"
            >
              <svg
                height="48"
                viewBox="0 0 48 48"
                width="48"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="loadingSpinner_1dvgeb3-o_O-inlineStyles_8njutv"
                  d="M44.19 23.455a1.91 1.91 0 1 1 3.801 0h.003c.004.18.006.363.006.545 0 13.255-10.745 24-24 24S0 37.255 0 24 10.745 0 24 0c.182 0 .364.002.545.006V.01a1.91 1.91 0 1 1 0 3.801v.015A20.564 20.564 0 0 0 24 3.818C12.854 3.818 3.818 12.854 3.818 24c0 11.146 9.036 20.182 20.182 20.182 11.146 0 20.182-9.036 20.182-20.182 0-.182-.003-.364-.007-.545h.015z"
                  fill-rule="nonzero"
                />
              </svg>
            </div>
          </span>
          <button
            aria-label="Make image bigger."
            class="button_vr44p2-o_O-reset_152ygtm-o_O-link_13xlah4-o_O-inlineStyles_1l8d9fz"
            type="button"
          />
        </div>
          
      </div>
    </div>
  </div>
</div>
`;
